Added header/navigation partial layout

--- a/themes/splice/layouts/default.htm
+++ b/themes/splice/layouts/default.htm
@@ -22,7 +22,7 @@ description = "Default layout"
 
         <!-- Stylesheets -->
         <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
-        <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet">
+        <!-- <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet"> -->
         <link href="{{ 'assets/css/style.css'|theme }}" rel="stylesheet">
 		
 		<!--[if lt IE 9]>
