--- a/themes/splice/partials/site/header.htm
+++ b/themes/splice/partials/site/header.htm
@@ -1,4 +1,4 @@
-<!-- Nav -->
+<!-- Nav **
 <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top navbar-autohide" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -19,4 +19,25 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
+
+    <div class="container">
+        <a href="index.html" id="branding">
+            <!--<img src="dummy/logo.png" alt="Splice Official">-->
+            <h1 class="band-logo">SPLICE</h1>
+            <small class="site-description">Splice</small>
+        </a> <!-- #branding -->
+        
+        <nav class="main-navigation">
+            <button type="button" class="toggle-menu"><i class="fa fa-bars"></i></button>
+            <ul class="menu">
+                <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
+                <li class="menu-item"><a href="about.html">About</a></li>
+                <li class="menu-item"><a href="gallery.html">Gallery</a></li>
+                <li class="menu-item"><a href="download.html">Download</a></li>
+                <li class="menu-item"><a href="blog.html">Blog</a></li>
+                <li class="menu-item"><a href="contact.html">Contact</a></li>
+            </ul> <!-- .menu -->
+        </nav> <!-- .main-navigation -->
+        <div class="mobile-menu"></div>
+    </div>
