--- a/themes/splice/partials/site/header.htm
+++ b/themes/splice/partials/site/header.htm
@@ -22,7 +22,7 @@
 </nav> -->
 
     <div class="container">
-        <a href="index.html" id="branding">
+        <a href="{{ 'home'|page }}" id="branding">
             <!--<img src="dummy/logo.png" alt="Splice Official">-->
             <h1 class="band-logo">SPLICE</h1>
             <small class="site-description">Splice</small>
@@ -31,12 +31,11 @@
         <nav class="main-navigation">
             <button type="button" class="toggle-menu"><i class="fa fa-bars"></i></button>
             <ul class="menu">
-                <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
-                <li class="menu-item"><a href="about.html">About</a></li>
-                <li class="menu-item"><a href="gallery.html">Gallery</a></li>
-                <li class="menu-item"><a href="download.html">Download</a></li>
-                <li class="menu-item"><a href="blog.html">Blog</a></li>
-                <li class="menu-item"><a href="contact.html">Contact</a></li>
+                <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'home'|page }}">Home</a></li>
+                <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'about'|page }}">About</a></li>
+                <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'gallery'|page }}">Gallery</a></li>
+                <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'gigography'|page }}">Gigography</a></li>
+                <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'contact'|page }}">Contact</a></li>
             </ul> <!-- .menu -->
         </nav> <!-- .main-navigation -->
         <div class="mobile-menu"></div>
