Added footer template/structure partial for default splice theme

--- a/themes/splice/partials/site/footer.htm
+++ b/themes/splice/partials/site/footer.htm
@@ -1,6 +1,16 @@
-<div id="footer">
-    <div class="container">
-        <hr />
-        <p class="muted credit">&copy; {{ "now"|date("Y") }} Francis Hackenberger</p>
-    </div>
+<div class="container">
+    <img src="dummy/logo-footer.png" alt="SPLICE">
+    
+    <address>
+        <p>Oshawa, Ontario <br><a href="">Phone #</a> <br> <a href="mailto:info@bandname.com">info@bandname.com</a></p> 
+    </address> 
+    
+    <div class="social-links">
+        <a href="#"><i class="fa fa-facebook-square"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
+        <a href="#"><i class="fa fa-pinterest"></i></a>
+    </div> <!-- .social-links -->
+    
+    <p class="copy">Copyright 2018 Splice Official. All right reserved</p>
 </div>
