Updated home page with new content and created partials for upcoming event and past shows

--- a/themes/splice/partials/site/footer.htm
+++ b/themes/splice/partials/site/footer.htm
@@ -1,14 +1,13 @@
-<div class="container">
+<div class="container" style="text-align:center;">
     <img src="dummy/logo-footer.png" alt="SPLICE">
     <address>
-        <p>Oshawa, Ontario <br><a href="">Phone #</a> <br> <a href="mailto:info@bandname.com">info@bandname.com</a></p> 
+        <p>Oshawa, Ontario <br> <a href="mailto:Splice.ca@gmail.com"splice.ca@gmail.com</a></p> 
     </address> 
     
     <div class="social-links">
-        <a href="#"><i class="fa fa-facebook-square"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-google-plus"></i></a>
-        <a href="#"><i class="fa fa-pinterest"></i></a>
+        <a href="#"><i class="fa fa-facebook-square"></i> @Spliceband</a>
+         | <a href="#"><i class="fa fa-snapchat"></i> @Spliceofficial</a> | 
+        <a href=""><i class="fa fa-instagram"></i> @Spliceofficial_ca</a>
     </div> <!-- .social-links -->
     
     <p class="copy">Copyright 2018 Splice Official. All right reserved</p>
