--- a/themes/splice/partials/site/header.htm
+++ b/themes/splice/partials/site/header.htm
@@ -2,7 +2,7 @@
     <a href="{{ 'home'|page }}" id="branding">
         <!--<img src="dummy/logo.png" alt="Splice Official">-->
         <h1 class="band-logo">SPLICE</h1>
-        <small class="site-description">Splice</small>
+        <small class="site-description">The next stage in the evolution of rock music</small>
     </a> <!-- #branding -->
     
     <nav class="main-navigation">
