--- a/themes/splice/assets/css/style.css
+++ b/themes/splice/assets/css/style.css
@@ -1,13 +1,3 @@
-/*!
- * Project_Name: Themezy Band Template
- * Author: Themezy
- * Email: info@themezy.com
- * URL: http://themezy.com
- */
-/*=========================================== 
- * Importing CSS Libraries
- *===========================================*/
-/* line 45, sass/libs/_normalize.scss */
 article,
 aside,
 details,
@@ -2701,3 +2691,17 @@ body {
         color: #fd5927; }
 
 /*# sourceMappingURL=style.css.map */
+
+.main-content {
+  min-height: 700px;
+}
+
+#contact{
+	background:#333333;
+	color:#f4f4f4;
+	padding-bottom:80px;
+}
+
+textarea.form-control{
+    height:100px;
+}
