--- a/themes/splice/partials/site/header.htm
+++ b/themes/splice/partials/site/header.htm
@@ -9,9 +9,9 @@
         <button type="button" class="toggle-menu"><i class="fa fa-bars"></i></button>
         <ul class="menu">
             <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'home'|page }}">Home</a></li>
-            <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'about'|page }}">About</a></li>
-            <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'gallery'|page }}">Gallery</a></li>
-            <li class="menu-item {% if this.page.id == 'home' %}current-menu-item{% endif %}"><a href="{{ 'contact'|page }}">Contact</a></li>
+            <li class="menu-item {% if this.page.id == 'about' %}current-menu-item{% endif %}"><a href="{{ 'about'|page }}">About</a></li>
+            <li class="menu-item {% if this.page.id == 'gallery' %}current-menu-item{% endif %}"><a href="{{ 'gallery'|page }}">Gallery</a></li>
+            <li class="menu-item {% if this.page.id == 'contact' %}current-menu-item{% endif %}"><a href="{{ 'contact'|page }}">Contact</a></li>
         </ul> <!-- .menu -->
     </nav> <!-- .main-navigation -->
     <div class="mobile-menu"></div>
