Added gallery page and new images to go along with it

--- a/themes/splice/assets/css/style.css
+++ b/themes/splice/assets/css/style.css
@@ -2705,3 +2705,13 @@ body {
 textarea.form-control{
     height:100px;
 }
+
+.port-image
+{
+    width: 100%;
+}
+
+.gallery_product
+{
+    margin-bottom: 30px;
+}
